# example-python-cli

./: .gitignore  README.md  pyproject.toml  rename.sh  run.sh
example_python_cli/: __main__.py  lib.py
example_python_cli/scripts/: __main__.py
example_python_cli/tests/: test_lib.py
scripts/: run.py  run.sh
simple_python_package/: __main__.py  lib.py  main.py
simple_python_package/scripts/: __main__.py
simple_python_package/tests/: test_lib.py
